hphp/hack/test/typecheck/case_null.php.rust_elab.exp
File "case_null.php", line 4, characters 6-9:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
